--- a/app/static/about.html
+++ b/app/static/about.html
@@ -10,31 +10,30 @@
   <link href="./static/hamburgers.css" rel="stylesheet">
 </head>
 <body>
-        <div class="header">
+    <div class="header">
 
-        </div>
+        <ul class="header-content hidden">
+            <li><a href="./" id="header1">- Home</a></li>
+            <li><a href="./about" id="header2">- About</a></li>
+            <li><a href="./work" id="header3">- My Work</a></li>
+            <li><a href="./offline" id="header4">- Upcoming</a></li>
+          </ul>
+    </div>
 
-        <button class="hamburger hamburger--collapse menu-button" type="button" onclick="">
-          <span class="hamburger-box">
-            <span class="hamburger-inner"></span>
-          </span>
-        </button>
+    <h2 class="menu-title">
+        Titularatity
+    </h2>
+    <div class="menu-button">
+        <div class="hamburger hamburger--elastic" tabindex="0" aria-label="Menu" role="button" aria-controls="navigation">
+            <div class="hamburger-box">
+              <div class="hamburger-inner"></div>
+            </div>
+          </div>
+    </div>
+
+    <div class="parallax"></div>   
       
-        <aside class="js-side-nav side-nav">
-          <nav class="js-side-nav-container side-nav__container">
-            <button class="js-menu-hide side-nav__hide material-icons"><img src="./images/close-icon.png" style="height: 25px; width: 25px;"/>
-            </button>
-            <header class="side-nav__header">
-              Contents
-            </header>
-            <ul class="side-nav__content">
-              <li><a href="./"><span class="text-muted h5" id="homeLink">Home</span></a></li>
-              <li><a href="./about"><span class="text-muted h5" id="aboutLink">About</span></a></li>
-              <li><a href="./work"><span class="text-muted h5" id="collectionsLink">My Work</span></a></li>
-              <li><a href="./offline"><span class="text-muted h5" id="upcomingLink">Upcoming</span></a></li>
-            </ul>
-          </nav>
-        </aside>
+
         <!-- <script src='./static/debatinator.js'></script> -->
         <script src='./static/top-nav.js'></script>
         <script src='../app.js'></script>
