Carousel update, menu bug squash

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <h2 class="menu-title">
-            Titularatity
+            The Nerve Museum
         </h2>
         <div class="menu-button">
             <div class="hamburger hamburger--elastic" tabindex="0" aria-label="Menu" role="button" aria-controls="navigation">
@@ -55,14 +55,52 @@
 
         <div class="cardContainer">
             <div class="frontPageCard">
+                <div class="cardImageContainer" style="background-image: url('../images/Tom_circa_1980.jpg')">
+                    <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
+                    <div class="cardFooter">
+                        Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+                    </div>
+                  </div>
+            </div>
+
+            <div class="frontPageCard">
+                <div class="cardImageContainer" style="background-image: url('../images/Tom_inFrontOf_ERROR.jpg')">
+                    <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
+                    <div class="cardFooter">
+                        Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+                    </div>
+                  </div>
+            </div>
+
+            <div class="frontPageCard">
+                <div class="cardImageContainer" style="background-image: url('../images/Tom_inFrontOf_TDial.jpg')">
+                    <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
+                    <div class="cardFooter">
+                        Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+                    </div>
+                  </div>
+            </div>
+            <div class="frontPageCard">
+                <div class="cardImageContainer" style="background-image: url('../images/Tom_circa_1980.jpg')">
+                    <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
+                    <div class="cardFooter">
+                        Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+                    </div>
+                  </div>
+            </div>
+
+
+
+            <div class="frontPageCard">
                 <div class="cardImageContainer">
-                    <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/>
+                    <img src="../images/Tom_inFrontOf_ERROR.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/>
                   </div>
               <div class="cardFooter">
                   Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
               </div>
             </div>
 
+            
             <div class="frontPageCard">
                 <div class="cardImageContainer">
                     <img src="../images/Tom_inFrontOf_ERROR.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/>
@@ -71,33 +109,6 @@
                     Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
                 </div>
               </div>
-
-            <div class="frontPageCard">
-                <div class="cardImageContainer">
-                    <img src="../images/Tom_inFrontOf_TDial.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/>
-                  </div>
-                <div class="cardFooter">
-
-                  </div>
-            </div>
-
-            <div class="frontPageCard">
-                <div class="cardImageContainer">
-                    <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/>
-                  </div>
-                <div class="cardFooter">
-                    Venenatis cras sed felis eget velit aliquet. Praesent elementum facilisis leo vel fringilla. Et magnis dis parturient montes nascetur. 
-                  </div>
-            </div>
-
-            <div class="frontPageCard">
-                <div class="cardImageContainer">
-                    <img src="../images/Tom_inFrontOf_ERROR.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/>
-                  </div>
-              <div class="cardFooter">
-                  Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
-              </div>
-            </div>
 
             <div class="spacer"></div>
         </div>
