--- a/app/static/work.html
+++ b/app/static/work.html
@@ -21,7 +21,7 @@
     </div>
 
     <h2 class="menu-title">
-        Titularatity
+        My Work
     </h2>
     <div class="menu-button">
         <div class="hamburger hamburger--elastic" tabindex="0" aria-label="Menu" role="button" aria-controls="navigation">
