removing static dir

--- a/app/about.html
+++ b/app/about.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="theme-color" content="#FF00FF">
   <title>The Nerve Museum</title>
-  <link rel="stylesheet" href="./static/styles.css">
-  <link href="./static/hamburgers.css" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
+  <link href="./hamburgers.css" rel="stylesheet">
 </head>
 <body>
     <div class="header">
@@ -64,8 +64,8 @@
     </div>
 
 
-    <!-- <script src='./static/debatinator.js'></script> -->
-    <script src='./static/top-nav.js'></script>
+    <!-- <script src='./debatinator.js'></script> -->
+    <script src='./top-nav.js'></script>
     <script src='../app.js'></script>
 
     <script>
