--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="theme-color" content="#FF00FF">
   <title>The Nerve Museum</title>
-  <link rel="stylesheet" href="./static/styles.css">
-  <link href="./static/hamburgers.css" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
+  <link href="./hamburgers.css" rel="stylesheet">
 </head>
 <body>
         <div class="header">
@@ -64,7 +64,7 @@
             </div>
 
             <div class="frontPageCard">
-                <div class="cardImageContainer" style="background-image: url('../images/Tom_inFrontOf_ERROR.jpg')">
+                <div class="cardImageContainer" style="background-image: url('../images/Tom_inFrontOf_ERROR.jpg'); -webkit-filter: blur(5px);  filter: blur(5px);">
                     <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
                     <div class="cardFooter">
                         Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
@@ -137,8 +137,8 @@
       </div>
 
       
-    <!-- <script src='./static/debatinator.js'></script> -->
-    <script src='./static/top-nav.js'></script>
+    <!-- <script src='./debatinator.js'></script> -->
+    <script src='./top-nav.js'></script>
     <script src='../app.js'></script>
 
     <script>
