--- a/app/about.html
+++ b/app/about.html
@@ -17,7 +17,8 @@
             <li><a href="./about" id="header2">- About</a></li>
             <li><a href="./work" id="header3">- My Work</a></li>
             <li><a href="./offline" id="header4">- Upcoming</a></li>
-          </ul>
+            <li><a href="./contact" id="header5">- Contact</a></li>
+        </ul>
     </div>
 
     <h2 class="menu-title">
