front page scroll reactive images

--- a/app/work.html
+++ b/app/work.html
@@ -34,6 +34,66 @@
 
     <div class="parallax"></div>   
 
+    <div class="cardContainer">
+      <div class="frontPageCard">
+          <div class="cardImageContainer" style="background-image: url('../images/Tom_circa_1980.jpg')">
+              <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
+              <div class="cardFooter">
+                  Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+              </div>
+            </div>
+      </div>
+
+      <div class="frontPageCard">
+          <div class="cardImageContainer" style="background-image: url('../images/Tom_inFrontOf_ERROR.jpg'); -webkit-filter: blur(5px);  filter: blur(5px);">
+              <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
+              <div class="cardFooter">
+                  Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+              </div>
+            </div>
+      </div>
+
+      <div class="frontPageCard">
+          <div class="cardImageContainer" style="background-image: url('../images/Tom_inFrontOf_TDial.jpg')">
+              <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
+              <div class="cardFooter">
+                  Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+              </div>
+            </div>
+      </div>
+      <div class="frontPageCard">
+          <div class="cardImageContainer" style="background-image: url('../images/Tom_circa_1980.jpg')">
+              <!-- <img src="../images/Tom_circa_1980.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/> -->
+              <div class="cardFooter">
+                  Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+              </div>
+            </div>
+      </div>
+
+
+
+      <div class="frontPageCard">
+          <div class="cardImageContainer">
+              <img src="../images/Tom_inFrontOf_ERROR.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/>
+            </div>
+        <div class="cardFooter">
+            Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+        </div>
+      </div>
+
+      
+      <div class="frontPageCard">
+          <div class="cardImageContainer">
+              <img src="../images/Tom_inFrontOf_ERROR.jpg"  onerror="this.onerror=null;this.src='../images/TomSpeaking.jpg'" class="cardImage" alt="Tom In front of Thornton Dial Painting"/>
+            </div>
+          <div class="cardFooter">
+              Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. 
+          </div>
+        </div>
+
+      <div class="spacer"></div>
+  </div>
+
         <script src='./top-nav.js'></script>
         <script src='../app.js'></script>
 
