--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
         <!-- <img class="headerImgLeft" src="../images/TapestryForTheDisappearingPeople.jpg"/> -->
         <img class="profileImg" src="../images/TomSpeaking.jpg"/>
         <div class="frontPageTextBoxHeader">
-          <h1 class="headerText">Dis a Header</h1>
+          <h1 class="headerText">Welcome to the Nerve Museum</h1>
         </div>
 
         <div class="frontPageTextBox">
