work items and memoir placeholder

--- a/app/about.html
+++ b/app/about.html
@@ -16,7 +16,7 @@
             <li><a href="./" id="header1">- Home</a></li>
             <li><a href="./about" id="header2">- About</a></li>
             <li><a href="./work" id="header3">- My Work</a></li>
-            <li><a href="./offline" id="header4">- Upcoming</a></li>
+            <li><a href="./upcoming" id="header4">- Upcoming</a></li>
             <li><a href="./contact" id="header5">- Contact</a></li>
         </ul>
     </div>
@@ -37,10 +37,34 @@
 
     <img class="profileImg" src="../images/TomSpeaking.jpg"/>
     <div class="frontPageTextBoxHeader">
-      <h1 class="headerText">Dis a Header</h1>
+      <h1 class="headerText">About Me</h1>
     </div>
 
     <div class="frontPageTextBox">
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis enim lobortis scelerisque fermentum dui faucibus in ornare. Dui sapien eget mi proin sed libero. Ultrices vitae auctor eu augue ut lectus arcu bibendum. Bibendum est ultricies integer quis auctor elit sed. Gravida in fermentum et sollicitudin ac. Risus ultricies tristique nulla aliquet. Risus viverra adipiscing at in tellus integer feugiat scelerisque. Parturient montes nascetur ridiculus mus. Egestas pretium aenean pharetra magna ac. Vulputate dignissim suspendisse in est ante in. Nisl rhoncus mattis rhoncus urna neque viverra justo. Ultricies leo integer malesuada nunc vel risus.</p>
+
+        <p>Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. Sem viverra aliquet eget sit amet tellus cras. Aliquam ultrices sagittis orci a scelerisque purus semper. Donec adipiscing tristique risus nec feugiat in. Pretium viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Purus in massa tempor nec feugiat nisl pretium. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Id neque aliquam vestibulum morbi blandit cursus risus. Nunc mi ipsum faucibus vitae aliquet nec. Facilisis leo vel fringilla est ullamcorper eget nulla facilisi. Aliquam ultrices sagittis orci a scelerisque. Venenatis cras sed felis eget velit aliquet. Praesent elementum facilisis leo vel fringilla. Et magnis dis parturient montes nascetur. Sed vulputate odio ut enim blandit volutpat. Leo vel fringilla est ullamcorper eget nulla. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Condimentum vitae sapien pellentesque habitant morbi.</p>
+
+        <p>Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. Sem viverra aliquet eget sit amet tellus cras. Aliquam ultrices sagittis orci a scelerisque purus semper. Donec adipiscing tristique risus nec feugiat in. Pretium viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Purus in massa tempor nec feugiat nisl pretium. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Id neque aliquam vestibulum morbi blandit cursus risus. Nunc mi ipsum faucibus vitae aliquet nec. Facilisis leo vel fringilla est ullamcorper eget nulla facilisi. Aliquam ultrices sagittis orci a scelerisque. Venenatis cras sed felis eget velit aliquet. Praesent elementum facilisis leo vel fringilla. Et magnis dis parturient montes nascetur. Sed vulputate odio ut enim blandit volutpat. Leo vel fringilla est ullamcorper eget nulla. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Condimentum vitae sapien pellentesque habitant morbi.</p>
+
+    
+    </div>
+
+    <div class="memoirContainer">
+        <div class="memoirImageHolder">
+            <img src="./images/hp1_cover.jpg" class="memoirCover" alt="My Memoir"/>
+        </div>
+        <div class="memoirDescriptionContainer">
+            <h3>My Memoir</h3>
+
+            <p>Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. Sem viverra aliquet eget sit amet tellus cras. Aliquam ultrices sagittis orci a scelerisque purus semper. Donec adipiscing tristique risus nec feugiat in. Pretium viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Purus in massa tempor nec feugiat nisl pretium. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Id neque aliquam vestibulum morbi blandit cursus risus. Nunc mi ipsum faucibus vitae aliquet nec. Facilisis leo vel fringilla est ullamcorper eget nulla facilisi. Aliquam ultrices sagittis orci a scelerisque. Venenatis cras sed felis eget velit aliquet. Praesent elementum facilisis leo vel fringilla. Et magnis dis parturient montes nascetur. Sed vulputate odio ut enim blandit volutpat. Leo vel fringilla est ullamcorper eget nulla. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Condimentum vitae sapien pellentesque habitant morbi.</p>
+
+        </div>
+    </div>
+
+    <div class="frontPageTextBox">
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis enim lobortis scelerisque fermentum dui faucibus in ornare. Dui sapien eget mi proin sed libero. Ultrices vitae auctor eu augue ut lectus arcu bibendum. Bibendum est ultricies integer quis auctor elit sed. Gravida in fermentum et sollicitudin ac. Risus ultricies tristique nulla aliquet. Risus viverra adipiscing at in tellus integer feugiat scelerisque. Parturient montes nascetur ridiculus mus. Egestas pretium aenean pharetra magna ac. Vulputate dignissim suspendisse in est ante in. Nisl rhoncus mattis rhoncus urna neque viverra justo. Ultricies leo integer malesuada nunc vel risus.</p>
 
         <p>Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. Sem viverra aliquet eget sit amet tellus cras. Aliquam ultrices sagittis orci a scelerisque purus semper. Donec adipiscing tristique risus nec feugiat in. Pretium viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Purus in massa tempor nec feugiat nisl pretium. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Id neque aliquam vestibulum morbi blandit cursus risus. Nunc mi ipsum faucibus vitae aliquet nec. Facilisis leo vel fringilla est ullamcorper eget nulla facilisi. Aliquam ultrices sagittis orci a scelerisque. Venenatis cras sed felis eget velit aliquet. Praesent elementum facilisis leo vel fringilla. Et magnis dis parturient montes nascetur. Sed vulputate odio ut enim blandit volutpat. Leo vel fringilla est ullamcorper eget nulla. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Condimentum vitae sapien pellentesque habitant morbi.</p>
