--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
                 <li><a href="./" id="header1">- Home</a></li>
                 <li><a href="./about" id="header2">- About</a></li>
                 <li><a href="./work" id="header3">- My Work</a></li>
-                <li><a href="./offline" id="header4">- Upcoming</a></li>
+                <li><a href="./upcoming" id="header4">- Upcoming</a></li>
                 <li><a href="./contact" id="header5">- Contact</a></li>
             </ul>
         </div>
