minor ui tweaks

--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
 
         <div class="mainImgLeftContainerBefore">
             <img src="../images/Tom_inFrontOf_TDial.jpg"  class="headerImgLeft" alt="Tom In front of Thornton Dial Painting"/>
-            <div class="imageCaptionContainerLeft"></div>
+            <div class="imageCaptionContainer imageCaptionContainerLeft"></div>
         </div>
 
 
@@ -66,7 +66,7 @@
 
     <div class="mainImgRightContainerBefore">
         <img src="../images/Tom_inFrontOf_TDial.jpg"  class="headerImgRight" alt="Tom In front of Thornton Dial Painting"/>
-        <div class="imageCaptionContainerRight">
+        <div class="imageCaptionContainer imageCaptionContainerRight">
             <p>Augue neque gravida in fermentum. Convallis a cras semper auctor neque vitae tempus quam. Sem viverra aliquet eget sit amet tellus cras. Aliquam ultrices sagittis orci a scelerisque purus semper. Donec adipiscing tristique risus nec feugiat in. Pretium viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Purus in massa tempor nec feugiat nisl pretium. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Id neque aliquam vestibulum morbi blandit cursus risus. Nunc mi ipsum faucibus vitae aliquet nec. Facilisis leo vel fringilla est ullamcorper eget nulla facilisi. Aliquam ultrices sagittis orci a scelerisque. Venenatis cras sed felis eget velit aliquet. Praesent elementum facilisis leo vel fringilla. Et magnis dis parturient montes nascetur. Sed vulputate odio ut enim blandit volutpat. Leo vel fringilla est ullamcorper eget nulla. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Condimentum vitae sapien pellentesque habitant morbi.</p>
 
         </div>
@@ -82,7 +82,7 @@
 
     <div class="mainImgLeftContainerBefore">
         <img src="../images/Tom_inFrontOf_TDial.jpg"  class="headerImgLeft" alt="Tom In front of Thornton Dial Painting"/>
-        <div class="imageCaptionContainerLeft"></div>
+        <div class="imageCaptionContainer imageCaptionContainerLeft"></div>
     </div>
 
 
@@ -106,7 +106,7 @@
       
     <!-- <script src='./debatinator.js'></script> -->
     <script src='./top-nav.js'></script>
-    <script src='../app.js'></script>
+    <script src='./app.js'></script>
 
     <script>
         // if(navigator.serviceWorker) {
