--- a/app/about.html
+++ b/app/about.html
@@ -91,8 +91,7 @@
 
     <!-- <script src='./debatinator.js'></script> -->
     <script src='./top-nav.js'></script>
-    <script src='../app.js'></script>
-
+    <script src='./app.js'></script>
     <script>
         // if(navigator.serviceWorker) {
         //     navigator.serviceWorker.register('/sw.js')
