--- a/app/contact.html
+++ b/app/contact.html
@@ -49,10 +49,9 @@
 
         </form>
     </div>
-
+    
     <script src='./top-nav.js'></script>
-    <script src='../app.js'></script>
-
+    <script src='./app.js'></script>
     <script>
 
         // Do some emailing here
