--- a/app/upcoming.html
+++ b/app/upcoming.html
@@ -93,9 +93,9 @@
 
       <div class="spacer"></div>
     </div>
-
-        <script src='./top-nav.js'></script>
-        <script src='../app.js'></script>
+    
+    <script src='./top-nav.js'></script>
+    <script src='./app.js'></script>
 
     <script>
 
