de-lorem-ipsuming and some additional images

--- a/app/work.html
+++ b/app/work.html
@@ -22,7 +22,7 @@
     </div>
 
       <h2 class="menu-title">
-          My Work
+          Work
       </h2>
       <div class="menu-button">
           <div class="hamburger hamburger--elastic" tabindex="0" aria-label="Menu" role="button" aria-controls="navigation">
@@ -32,7 +32,30 @@
             </div>
       </div>
 
-      <div class="parallax"></div>   
+      <div class="parallax"></div>  
+
+      <div class="frontPageTextBoxHeader">
+        <img class="profileImg" src="../images/TomSpeaking.jpg"/>
+
+        <h1 class="headerText">Patterson's Work</h1>
+        <h3 class="headerSubText">Selections of Writings and Articles</h3>
+      </div>
+
+      <div class="frontPageTextBox">
+        <h2>PARALLEL ART UNIVERSE:
+          Selected Writings on Contemporary Folk, Visionary, and Outsider Art</h2>
+        <p>Parallel Art Universe brings together some of Patterson’s most informative,
+          insightful, and provocative writings on the field over the years since his books on Finster
+          and Martin were published. These essays, artist profiles, and related reminiscences
+          were originally published, in slightly different form, in various exhibition catalogs and in
+          magazines including Art Papers, Folk Art. and Raw Vision.</p>
+          <p>Patterson writes informatively and in an accessible, often entertaining manner
+            about a sprawling, dynamic, unruly subset of the art world that has drawn steadily
+            increasing public attention since the 1970s. His Parallel Art Universe stands an
+            important addition to the growing body of critical literature and art-historical scholarship
+            related to the field.</p>
+      </div>
+
 
     <div class="frontPageTextBox">
 
