--- a/app/contact.html
+++ b/app/contact.html
@@ -78,7 +78,7 @@
         </form> -->
 
 
-        <form id="contactForm" method="POST" action="send" data-netlify="true">
+        <form id="contactForm" action="POST" data-netlify="true">
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="firstName">First Name:</label>
