--- a/app/contact.html
+++ b/app/contact.html
@@ -92,7 +92,7 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                 <label for="phoneNumber">Telephone:</label>
-                <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="John" pattern="[0-9]{10}" required class="form-control">
+                <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="123-555-7891" pattern="[0-9]{10}" required class="form-control">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="returnEmailAddress">Your Email:</label>
