--- a/app/contact.html
+++ b/app/contact.html
@@ -103,6 +103,10 @@
                 <label for="exampleFormControlTextarea1">Message:</label>
                 <textarea class="form-control" id="emailContentTextField" name="emailContent" rows="6" placeholder="Enter text here..." form="contactForm"></textarea>
             </div>
+          
+            <div class="form-group">
+              <div data-netlify-recaptcha="true"></div>
+            </div>
 
             <button type="submit" class="btn btn-primary">Send Email!</button>
           </form>
