--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
             </p>
         </div>
 
-        <div class="mainImgLeftContainerBefore">
+        <div class="mainImgLeftContainerBefore" id="nerveMuseumSignImgContainer">
             <img src="./images/nerve_museum_sign.jpg"  class="headerImgLeft" alt="Nerve Museum Sign"/>
             <div class="imageCaptionContainer imageCaptionContainerLeft">
                 <div class="imageCaptionText">Several years ago I commissioned the artist Hieronymus to paint a NERVE MUSEUM sign for the stairwell leading up to my humble garret. This is the work that hangs in my house to this day
@@ -83,12 +83,15 @@
             </p>
         </div>
 
-        
+
         <div class="mainImgLeftContainerBefore">
             <img src="./images/tom_in_front_of_nerve_museum_sign.jpg"  class="headerImgLeft" alt="Tom In front of Thornton Dial Painting"/>
             <div class="imageCaptionContainer imageCaptionContainerLeft">
-                <p class="imageCaptionText" sstyle="line-height: 2em;"><span class="largeQuotes">"</span>Patterson’s roles as critic and curator are interwoven. “In both cases I’m essentially involved with the same concerns–art and the way it’s presented in museums and galleries. When writing as a critic, I’m an evaluator of art that I didn’t select and curatorial decisions I didn’t make. As a curator I’m an enthusiastic advocate for work that I’ve selected–art that has already passed my test, so to speak–and I write about what I see as its strengths and virtues.” Patterson doesn’t have one method of curation. Artists, themes, or materials may serve as the starting point for his exhibits. Much like his childhood experiences, Patterson’s professional life allows him to acknowledge all of the art that surrounds us, but still champion the pieces that speak to him in some special way.<span class="largeQuotes">"</span></p>
-                <p style="padding-left: 10vw;">- Julian Stern (<a href="http://brutforce.com/the-vernacular-of-tom-patterson/"><u>The Vernacular of Tom Patterson</u></a>, 2015)</p>
+                <p class="imageCaptionText" sstyle="line-height: 2em;">"Patterson’s roles as critic and curator are interwoven. “In both cases I’m essentially involved with the same concerns–art and the way it’s presented in museums and galleries. When writing as a critic, I’m an evaluator of art that I didn’t select and curatorial decisions I didn’t make. As a curator I’m an enthusiastic advocate for work that I’ve selected–art that has already passed my test, so to speak–and I write about what I see as its strengths and virtues.” Patterson doesn’t have one method of curation. Artists, themes, or materials may serve as the starting point for his exhibits. Much like his childhood experiences, Patterson’s professional life allows him to acknowledge all of the art that surrounds us, but still champion the pieces that speak to him in some special way."
+                <br/>
+                - Julian Stern (<a href="http://brutforce.com/the-vernacular-of-tom-patterson/"><u>The Vernacular of Tom Patterson</u></a>, 2015)
+                </p>
+                <!-- <p style="padding-left: 10vw;">- Julian Stern (<a href="http://brutforce.com/the-vernacular-of-tom-patterson/"><u>The Vernacular of Tom Patterson</u></a>, 2015)</p> -->
         
             </div>
         </div>
