--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,10 @@
 
         <div class="mainImgLeftContainerBefore">
             <img src="../images/Tom_at_Etowah_1980.jpg"  class="headerImgLeft" alt="Tom at Etowah Indian Mound, Cartersville GA circa 1980"/>
-            <div class="imageCaptionContainer imageCaptionContainerLeft"></div>
+            <div class="imageCaptionContainer imageCaptionContainerLeft">
+                <p class="imageCaptionText" sstyle="line-height: 2em;">"Patterson’s roles as critic and curator are interwoven. “In both cases I’m essentially involved with the same concerns–art and the way it’s presented in museums and galleries. When writing as a critic, I’m an evaluator of art that I didn’t select and curatorial decisions I didn’t make. As a curator I’m an enthusiastic advocate for work that I’ve selected–art that has already passed my test, so to speak–and I write about what I see as its strengths and virtues.” Patterson doesn’t have one method of curation. Artists, themes, or materials may serve as the starting point for his exhibits. Much like his childhood experiences, Patterson’s professional life allows him to acknowledge all of the art that surrounds us
+                </p>
+            </div>
         </div>
 
         <div class="frontPageTextBox">
@@ -64,15 +67,24 @@
             </p>
         </div>
 
-        <div class="mainImgLeftContainerBefore" id="nerveMuseumSignImgContainer">
+        <!-- <div class="mainImgLeftContainerBefore" id="nerveMuseumSignImgContainer">
             <img src="./images/nerve_museum_sign.jpg"  class="headerImgLeft" alt="Nerve Museum Sign"/>
             <div class="imageCaptionContainer imageCaptionContainerLeft">
                 <div class="imageCaptionText">Several years ago I commissioned the artist Hieronymus to paint a NERVE MUSEUM sign for the stairwell leading up to my humble garret. This is the work that hangs in my house to this day
                     Anyway, it seemed the perfect name for the website.
                 </div>
             </div>
-        </div>
+        </div> -->
 
+        <div class="mainImgRightContainerBefore">
+            <img src="./images/nerve_museum_sign.jpg"  class="headerImgRight" alt="Tom meeting Moise Tolliver, Montgomery, AL circa 1993"/>
+            <div class="imageCaptionContainer imageCaptionContainerRight"> 
+                <p class="imageCaptionText" sstyle="line-height: 2em;">Several years ago I commissioned the artist Hieronymus to paint a NERVE MUSEUM sign for the stairwell leading up to my humble garret. This is the work that hangs in my house to this day
+                Anyway, it seemed the perfect name for the website.
+            </p>
+            </div>
+        </div>
+    
 
         <div class="frontPageTextBox">
             <h4>Parallel Art Universe</h4>
@@ -112,7 +124,9 @@
     <div class="mainImgRightContainerBefore">
         <img src="../images/Tom_with_Mose_Tolliver.jpg"  class="headerImgRight" alt="Tom meeting Moise Tolliver, Montgomery, AL circa 1993"/>
         <div class="imageCaptionContainer imageCaptionContainerRight">
-            
+            <p class="imageCaptionText" sstyle="line-height: 2em;">
+                Mose Tolliver and myself at his house discussing the art world. Montgomery, Al circa 1993
+            </p> 
         </div>
     </div>
 
