third times a charm

--- a/app/index.html
+++ b/app/index.html
@@ -125,7 +125,7 @@
         <img src="../images/Tom_with_Mose_Tolliver.jpg"  class="headerImgRight" alt="Tom meeting Moise Tolliver, Montgomery, AL circa 1993"/>
         <div class="imageCaptionContainer imageCaptionContainerRight">
             <p class="imageCaptionText" sstyle="line-height: 2em;">
-                Mose Tolliver and myself at his house discussing the art world. Montgomery, Al circa 1993
+                The wonderful artist Mose Tolliver and myself at his house in Montgomery, Alabama (c 1993) discussing his views on outsider art and its influence on the broader art world. 
             </p> 
         </div>
     </div>
